Bug 425524 - Contiguous Selection Tool is not working properly
Summary: Contiguous Selection Tool is not working properly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-19 00:18 UTC by acc4commissions
Modified: 2020-08-28 18:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Before clicking (59.62 KB, image/png)
2020-08-28 12:34 UTC, Dmitry Kazakov
Details
After clicking inside selection (56.55 KB, image/png)
2020-08-28 12:34 UTC, Dmitry Kazakov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2020-08-19 00:18:00 UTC
SUMMARY
git c6ac82b

STEPS TO REPRODUCE
1. Select a part of the drawing with Contiguous Selction Tool.
2. In that state, try to select other parts.

OBSERVED RESULT
It doesn't select anything.


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 acc4commissions 2020-08-19 14:59:16 UTC
If you uncheck the 'Use Selection as Boundary' option, it works fine.

And contrary to what you mentioned in Bug 418071, it will only paint in the area inside the selection even when I uncheck the option.
Comment 2 Dmitry Kazakov 2020-08-28 12:34:07 UTC
Created attachment 131237 [details]
Before clicking
Comment 3 Dmitry Kazakov 2020-08-28 12:34:27 UTC
Created attachment 131238 [details]
After clicking inside selection
Comment 4 Dmitry Kazakov 2020-08-28 12:43:00 UTC
Well, I think it works as expected. "Use selection as boundary" is expected the "flooding" of the selection into areas you don't want. And it does that (see the screenshots). Another thing is that after flooding the current selection it cannot select anything else, that might be a UIX problem...
Comment 5 acc4commissions 2020-08-28 12:56:51 UTC
(In reply to Dmitry Kazakov from comment #4)
> Well, I think it works as expected. "Use selection as boundary" is expected
> the "flooding" of the selection into areas you don't want. And it does that
> (see the screenshots). Another thing is that after flooding the current
> selection it cannot select anything else, that might be a UIX problem...

Oh so does that mean it treats the existing selection as if it's the layer boundary?
Comment 6 Dmitry Kazakov 2020-08-28 13:46:30 UTC
> Oh so does that mean it treats the existing selection as if it's the layer
> boundary?

Yes, exactly :)
Comment 7 Bug Janitor Service 2020-08-28 14:02:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/482
Comment 8 Dmitry Kazakov 2020-08-28 18:50:05 UTC
Git commit b9e829a5b326c0165e3546dbd68fa274dbbc100f by Dmitry Kazakov.
Committed on 28/08/2020 at 14:00.
Pushed by dkazakov into branch 'krita/4.3'.

Make "Use Selection As Boundary" create new selection when clicking outside selection

Letting contiguous selection create new selection when clicking
outside the current selection will let the user keep this checkbox
always on. Default behavior for contiguous selection, when clicked
inside existing selection is "do nothing", therefore this checkbox
just extends this behavior.

M  +6    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc

https://invent.kde.org/graphics/krita/commit/b9e829a5b326c0165e3546dbd68fa274dbbc100f
Comment 9 Dmitry Kazakov 2020-08-28 18:50:23 UTC
Git commit 85b90c1c75de5a03cee657ce1ce8661a3f15c5f7 by Dmitry Kazakov.
Committed on 28/08/2020 at 18:50.
Pushed by dkazakov into branch 'master'.

Make "Use Selection As Boundary" create new selection when clicking outside selection

Letting contiguous selection create new selection when clicking
outside the current selection will let the user keep this checkbox
always on. Default behavior for contiguous selection, when clicked
inside existing selection is "do nothing", therefore this checkbox
just extends this behavior.

M  +6    -1    plugins/tools/selectiontools/kis_tool_select_contiguous.cc

https://invent.kde.org/graphics/krita/commit/85b90c1c75de5a03cee657ce1ce8661a3f15c5f7