Make "Use Selection As Boundary" create new selection when clicking outside selection

Letting contiguous selection create new selection when clicking
outside the current selection will let the user keep this checkbox
always on. Default behavior for contiguous selection, when clicked
inside existing selection is "do nothing", therefore this checkbox
just extends this behavior.

BUG:425524